# internal/models/models.go
@@ -13,3 +13,26 @@ type Category struct {
 	ID   string `redis:"-"`
 	Name string `redis:"name"`
 }
+
+type Product struct {
+	ID          string
+	Name        string
+	Description string
+	Price       float32
+	ImageUrl    string
+	Categories  []Category
+}
+
+type ProductCard struct {
+	ID       string
+	Name     string
+	Price    float32
+	ImageUrl string
+}
+
+type Cart struct {
+	ID       string
+	UserId   string
+	Price    float32
+	Products []ProductCard
+}
